tests/reference/cpp-expr7-529bd53.stderr
style suggestion: Could have used '**' instead of 'pow'
 --> tests/expr7.py:4:13
  |
4 |     a = i32(pow(2, 2))
  |             ^^^^^^^^^ '**' could be used instead

style suggestion: Could have used '**' instead of 'pow'
 --> tests/expr7.py:8:15
  |
8 |     res = i32(pow(a, b))
  |               ^^^^^^^^^ '**' could be used instead
code generation error: Type number '16' not supported
   --> $DIR/src/bin/../runtime/lpython_builtin.py:106:1
    |
106 | T = TypeVar('T')
    | ^^^^^^^^^^^^^^^^ 
